# Sir-Project-Tutor-Agent

./: .gitignore  README.md
Code_practice/: README.md
Code_practice/MCP_tools/: 03_context_engineering_tutorial.md
Code_practice/teacher_agent/: old_versioin.py
MCP_tools/: main.py  pyproject.toml
Sir Project/Tutor_agent/: main.py  prompts.py
Tutor Agent readme/: README.md  Technical_Developer_Guide.md
Tutor Version 0.0/Mcp_tools/: 01_prompt_engineering.md  main.py  pyproject.toml
Tutor Version 0.0/Tutor_agent/: pyproject.toml
Tutor_version_0.1/: README.md  main.py  pyproject.toml  tutor_prompt.py  ui.py  v1_prompt_Testing.py  v2_prompt.py
Tutor_version_0.1/PROMPTS/: tutor_prompt.py  v1_prompt_Testing.py  v2_prompt.py
teacher_agent/: main.py  prompts.py  pyproject.toml
